# RamorixEngine

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  RamorixEngine.sln  RamorixEngine.vcxproj  RamorixEngine.vcxproj.filters
Client/: CMakeLists.txt
Client/src/: main.cpp
Core/: CMakeLists.txt
Core/include/: Ramorix.h  rmxpch.h
Core/include/rmx/: Application.h  Core.h  Entry.h  Log.h
Core/include/rmx/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Core/src/: rmxpch.cpp
Core/src/rmx/: Application.cpp  Log.cpp
cmake/: SourceGroups.cmake
